# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[tool.black]
line-length = 100
target-version = ['py36']
include = '(\.pyi?$)'
exclude = '''

(
  /(
      \.github
    | \.tvm
    | \.tvm_test_data
    | \.vscode
    | \.venv
    | 3rdparty
    | build\/
    | cmake\/
    | conda\/
    | docker\/
    | docs\/
    | golang\/
    | include\/
    | jvm\/
    | licenses\/
    | nnvm\/
    | rust\/
    | src\/
    | vta\/
    | web\/
  )/
)
'''

[tool.poetry]
name = "relax"
version = "0.1.0"
description = ""
authors = []
packages = [
    { include = "tvm", from = "python" },
]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
attrs = "==22.2.0"
numpy = ">=1.21, <1.22.0"
decorator = "^5.1.1"
psutil = "^5.9.4"
scipy = "==1.7.3"
cloudpickle = "^1.6.0"

#############
# Backends #
#############
jinja2 = { version = "^3.1.2", optional = true }

# MetaSchedule
xgboost = {version = "==1.4.2", optional = true}

#############
# Importers #
#############

# Pytorch (also used by ONNX)
torch = { version = "==1.13.1", optional = true }
torchvision = { version = "==0.12.0", optional = true }

# ONNX frontend
onnx = {version = "==1.13.0", optional = true}
onnxoptimizer = { version = "==0.3.10", optional = true }
onnxruntime = { version = "==1.14.1", optional = true }

[tool.poetry.extras]
xgboost = ["xgboost"]
importer-onnx = ["future", "onnx", "onnxoptimizer", "onnxruntime", "torch", "torchvision"]
backend-cutlass = ["jinja2"]
